--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Browxin</title>
+    <link rel="stylesheet" href="./themes/bootstrap.min.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="./public/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
